# DeceptiForge

./: .dockerignore  .editorconfig  .env.example  .env.staging.example  .gitignore  .gitleaks.toml  .pip-audit-ignore  .prettierignore  .prettierrc.cjs  .trivyignore  README.md  docker-compose.ci.yml  docker-compose.override.yml  docker-compose.prod.example.yml  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
apps/api/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements-dev.lock.txt  requirements.lock.txt
apps/api/app/: __init__.py  main.py  security.py
apps/api/deceptiforge_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/migrations/: env.py  script.py.mako
apps/api/scripts/: demo.py  provision_judge_sandbox.py
apps/api/tests/: _deploy_factories.py  conftest.py  test_agent_retention.py  test_agent_sdk.py  test_agent_sensor_api.py  test_agent_sensor_services.py  test_agent_sensor_state.py  test_ai_tripwire_api.py  test_ai_tripwire_content.py  test_ai_tripwire_flow.py  test_ai_tripwire_state.py  test_alert_concurrency.py  test_alerting.py  test_analysis_api.py  test_analysis_contract.py  test_analysis_fixtures.py  test_api.py  test_believability.py  test_body_limit.py  test_bootstrap_and_encryption.py  test_browser_sensor_api.py  test_browser_sensor_services.py  test_browser_sensor_state.py  test_capacity.py  test_capacity_api.py  test_context_engine.py  test_cors_preflight.py  test_coverage_api.py  test_coverage_domain.py  test_coverage_engine.py  test_coverage_perf.py  test_coverage_scoring.py  test_database_generation.py  test_database_honey_api.py  test_database_honey_flow.py  test_database_honey_integration.py  test_database_honey_state.py  test_decoy_generation.py  test_demo.py  test_demo_access.py  (+45 more)
docs/: AgentPrivacy.md  (+61 more)
(+443 files in other folders)
