# Purpose: define the FastAPI package and Python quality tools. Responsibilities: pin compatible runtime tooling and test configuration. Future modules: add domain dependencies only when their bounded context needs them.
[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "deceptiforge-api"
version = "0.1.0"
description = "DeceptiForge API infrastructure"
requires-python = ">=3.12"
dependencies = ["alembic>=1.14,<2", "cryptography>=46.0.6,<49", "fastapi>=0.115,<1", "httpx>=0.28,<1", "pydantic-settings>=2.7,<3", "psycopg[binary]>=3.2,<4", "redis>=5,<6", "sqlalchemy>=2.0,<3", "uvicorn[standard]>=0.34,<1"]

[project.optional-dependencies]
dev = ["black>=25.1,<26", "fakeredis>=2,<3", "mypy>=1.14,<2", "pytest>=8.3,<9", "ruff>=0.9,<1"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI expresses dependencies/params as call defaults; these are not mutable-default bugs.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Header",
    "app.security.require_scope",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    # Tracked: Starlette's TestClient warns that httpx>=0.28 support is deprecated in favor of a
    # future httpx2. This is a test-only dependency signal; revisit when httpx2 is released.
    "ignore:Using `httpx` with `starlette.testclient` is deprecated:DeprecationWarning",
]
